--- a/data-analyst.html
+++ b/data-analyst.html
@@ -47,6 +47,14 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://hugo-and-cat-limited.workable.com/j/629A753D6B'>Hugo & Cat Limited - Jobs: Data and SEO Analyst (Contract / Contract to Perm) - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAv9VfwT&k=Job&j=ozACafwF&__jvst=Employee+Referral&__jvsd=sddHGhwz&__jvsc=Twitter&bid=nNGSVLww'>Hobsons Careers - Senior Sales Operations Data Analyst</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/veristat/job/oybBafwe'>Veristat Careers - Manager, Statistical Programming</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -99,7 +107,7 @@
 <p><span class="badge badge-light">North Carolina, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MassiveInsights/743999682529713-statistician'>Massive Insights Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MassiveInsights/743999682529713-statistician'>Massive Insights Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -137,7 +145,7 @@
 digital experiences is what Adobe's all about. We give everyone?from emerging
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-VA-McLean-8285-Greensboro-Dr-Booz/Data-Integration-and-Design-Analyst_R0062384'>Data Integration and Design Analyst</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-VA-McLean-8285-Greensboro-Dr-Booz/Data-Integration-and-Design-Analyst_R0062384'>Data Integration and Design Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Data Integration and Design Analyst. Key Role: As a key member of the financial 
 planning and analysis (FP&A) integrated analytics team, maintain responsibility?...</p>
@@ -194,7 +202,7 @@ analyst?...</p>
 returnship for experienced professionals returning to the workforce after taking 
 time?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/o2ebrands/4c7a2625-ba87-42d5-9c13-c46b0594e102'>O2E Brands - Data Analyst - O2E Brands</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/o2ebrands/4c7a2625-ba87-42d5-9c13-c46b0594e102'>O2E Brands - Data Analyst - O2E Brands</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -202,7 +210,7 @@ time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692163016-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692163016-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -296,7 +304,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/clearwateranalytics/jobs/4369781002'>Job Application for Financial Data Analyst at Clearwater Analytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/clearwateranalytics/jobs/4369781002'>Job Application for Financial Data Analyst at Clearwater Analytics</a></h5> 
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -328,11 +336,11 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KGSTechnologyGroupInc/743999692112367-entry-level-data-analyst'>KGS Technology Group Inc Entry Level Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KGSTechnologyGroupInc/743999692112367-entry-level-data-analyst'>KGS Technology Group Inc Entry Level Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://aginic.workable.com/jobs/1054483'>Jobs: Graduate Data Analyst (Canberra) - Apply online - Aginic</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/jobs/1054483'>Jobs: Graduate Data Analyst (Canberra) - Apply online - Aginic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Apply online for the job of Graduate Data Analyst (Canberra) at Aginic.</p>
 <hr/>
@@ -345,7 +353,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p>2 days ago ... Apply online for the job of Operations Data Analyst Intern (new business unit) at 
 Stuart.</p>
 <hr/>
-<h5><a href='https://telegraph.workable.com/j/0E9D1E888A?viewed=true'>The Telegraph - Jobs: Senior Data Analyst, Product - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://telegraph.workable.com/j/0E9D1E888A?viewed=true'>The Telegraph - Jobs: Senior Data Analyst, Product - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Senior Data Analyst, Product at The Telegraph.</p>
 <hr/>
@@ -371,7 +379,7 @@ Stuart.</p>
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hotstar/5ec7e5d9-0711-45a7-aeb0-25142da3c51d/apply'>Hotstar - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hotstar/5ec7e5d9-0711-45a7-aeb0-25142da3c51d/apply'>Hotstar - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Data Analyst. Mumbai, Maharashtra. 3. Ad Sales ? Sales. Full time. Submit your 
 application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
@@ -412,7 +420,7 @@ from Ironclad Technology Services would breach or violate any non-compete?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://aginic.workable.com/j/89D81AA017'>Aginic - Jobs: Data Analyst (Sydney) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/89D81AA017'>Aginic - Jobs: Data Analyst (Sydney) - Apply online</a></h5> 
 <p><span class="badge badge-light">Sydney Sydney Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -440,11 +448,11 @@ from Ironclad Technology Services would breach or violate any non-compete?...</p
 <p><span class="badge badge-light">Redwood City, CARedwood City, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/quotient/job/oF6Cafwh'>Quotient Technology Inc. Careers - Data Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/quotient/job/oF6Cafwh'>Quotient Technology Inc. Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Charlotte/Compliace-and-Operational-Risk-Specialist_19049445'>Data Reporting Analyst/Compliance and Operational Risk Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Charlotte/Compliace-and-Operational-Risk-Specialist_19049445'>Data Reporting Analyst/Compliance and Operational Risk Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... The role will require the ability to source data and reporting across a variety of 
 originations and servicing systems and data bases. The analyst will then be able
@@ -474,15 +482,6 @@ not subject you to adverse treatment). Our company values diversity.</p>
 <h5><a href='https://datatonic.workable.com/j/EA28F2A1FE'>Datatonic - Jobs: BI Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Stockholm Stockholm Stockholm London</span></p>
 <p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/analyst-v-healthcare-reporting-data-analysis-6252'>Analyst V Healthcare Reporting/Data Analysis - Florida Blue Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://ellaktor.workable.com/jobs/1076217'>Jobs: Monitoring - Data Analyst / Engineer - AKTOR SA ... - Ellaktor</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 14, 2019 ... Apply online for the job of Monitoring - Data Analyst / Engineer - AKTOR SA at 
-Ellaktor.</p>
 <hr/>
 
 
